<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/DobrydenSignup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/arima_madurai_bold"
            android:text="@string/dobry_den"
            android:textAlignment="center"
            android:textColor="#BC63E7"
            android:textSize="50sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/UdajeSignup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/archivo_narrow_italic"
            android:text="@string/udaje_signup"
            android:textAlignment="center"
            android:textColor="#AD7ED2"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"

        android:layout_marginTop="54dp">


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_weight="2"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:hint="Email_addres"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="45dp">


        <EditText
            android:id="@+id/editPass"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_pass_icon"
            android:drawablePadding="12dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/archivo_narrow"
            android:text="Zabudli ste heslo?"
            android:visibility="invisible"
            android:textAlignment="textEnd"
            android:textColor="#AD7ED2"
            android:textSize="15sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/prihlasitsa"
            android:layout_width="150dp"
            android:onClick="onClickLogin"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent"
            android:background="@drawable/custom_button_input"
            android:fontFamily="@font/arima_madurai_medium"
            android:text="@string/signup_button1"
            android:textSize="16dp"
            android:textColor="@color/white" />
        <Button

            android:id="@+id/regestracia"
            android:layout_width="150dp"
            android:layout_marginLeft="15dp"
            android:onClick="onClickRegestracia"
            android:layout_height="match_parent"
            android:background="@drawable/custom_button_input"
            android:fontFamily="@font/arima_madurai_medium"
            android:text="@string/signup_button2"
            android:textSize="16dp"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>