<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <ImageButton
            android:id="@+id/behind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Back"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />
        <TextView
            android:id="@+id/DobrydenInfo"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/hello_info"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="#BC63E7"/>

        />
        <ImageButton
            android:id="@+id/acount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_account_circle_24"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
                <TextView
                    android:id="@+id/Meno"
                    android:layout_width="150dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/arima_madurai_medium"
                    android:text="@string/name_info"
                    android:textSize="20dp"
                    android:textColor="#BC63E7"
                    android:textAlignment="center"
                    android:layout_marginLeft="30dp"/>
                <TextView
                    android:id="@+id/meno"
                    android:layout_width="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/arima_madurai_medium"
                    android:text="MenoPouzivatela"
                    android:visibility="invisible"
                    android:textSize="20dp"
                    android:textColor="#BC63E7"
                    android:textAlignment="center"
                    />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/mail"
            android:layout_width="150dp"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/arima_madurai_medium"
            android:text="@string/mail_info"
            android:textSize="20dp"
            android:textColor="#BC63E7"
            android:textAlignment="center"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:id="@+id/emailForVypis"
            android:layout_width="match_parent"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/arima_madurai_medium"
            android:text="MenoPouzivatela"
            android:visibility="invisible"
            android:textSize="20dp"
            android:textColor="#BC63E7"
            android:textAlignment="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="45dp">

        <TextView
            android:id="@+id/wantchange"
            android:layout_width="match_parent"

            android:layout_marginRight="15dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/arima_madurai_medium"
            android:text="@string/otazka_info"
            android:textSize="30dp"
            android:textColor="#BC63E7"
            android:textAlignment="center"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <EditText
            android:id="@+id/OldPassword"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_pass_icon"
            android:drawablePadding="12dp"
            android:hint="Old Password"
            android:inputType="textPassword"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <EditText
            android:id="@+id/newPass"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_pass_icon"
            android:drawablePadding="12dp"
            android:hint="New Password"
            android:inputType="textPassword"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <EditText
            android:id="@+id/NewRepass"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_pass_icon"
            android:drawablePadding="12dp"
            android:hint="New Password Again"
            android:inputType="textPassword"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/ChangePass"
            android:layout_width="150dp"
            android:onClick="OnKlickChangePass"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent"
            android:background="@drawable/custom_button_input"
            android:fontFamily="@font/arima_madurai_medium"
            android:text="@string/info_button1"
            android:textSize="16dp"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>